# mpv-rc

./: Cargo.toml  LICENSE  README.md  renovate.json
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: config.rs  constants.rs  main.rs  mpvrc.rs
src/mpvrc/: addui.rs  client.rs  command.rs  global_keybind.rs  mod.rs  win.rs
