[package]
name = "mpv-rc"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
eframe = "0.28.1"
egui = "0.28.1"
interprocess = { version = "2.2.1", default-features = false }
lazy_static = "1.4.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "std"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
winapi = { version = "0.3.9", features = ["commdlg", "impl-default"] }
