[package]
name = "mpv-rc"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
eframe = "0.31.0"
egui = "0.31.0"
interprocess = { version = "2.2.2", default-features = false }
rand = { version = "0.9.0", default-features = false, features = ["std_rng", "std", "thread_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
winapi = { version = "0.3.9", features = ["commdlg", "impl-default"] }
